Change Samiur's Bio
To fix typo and add more.

--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Samiur Rahman</h2>
             <p class="lead-text text-left">
-              When brainstorming how to collect the data for The Marketplace of Words, Tess realized she was lucky enough to be married to a Data Scientist. Samiur created the program that scanned nonprofits’ websites collecting words. He also help make this website you’re reading right now. For more about Samiur, visit his <a href="http://samiurr.com">website</a>, or contact him on <a href="http://twitter.com/samiur1204">Twitter</a>.
+              Samiur is an engineer passionate about solving problems that ail the world. He loves science, technology, literature and movies. When brainstorming how to collect the data for The Marketplace of Words, Tess realized she was lucky enough to be married to this wonderful data scientist. Samiur created the program that scanned nonprofits’ websites collecting words. He also assisted with the creation of the website you’re reading right now. For more about Samiur, visit his <a href="http://samiurr.com">website</a>, or contact him on <a href="http://twitter.com/samiur1204">Twitter</a>.
             </p>
           </div>
         </div>
